--- a/index.html
+++ b/index.html
@@ -3,153 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DCA Trading Bot - Téléchargement</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
-        }
-
-        .container {
-            max-width: 600px;
-            background: white;
-            border-radius: 20px;
-            padding: 40px;
-            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
-            text-align: center;
-        }
-
-        h1 {
-            color: #667eea;
-            margin-bottom: 20px;
-            font-size: 2em;
-        }
-
-        .icon {
-            font-size: 80px;
-            margin-bottom: 20px;
-        }
-
-        p {
-            color: #666;
-            line-height: 1.6;
-            margin-bottom: 30px;
-        }
-
-        .features {
-            text-align: left;
-            background: #f8f9fa;
-            padding: 20px;
-            border-radius: 10px;
-            margin-bottom: 30px;
-        }
-
-        .features h3 {
-            color: #667eea;
-            margin-bottom: 15px;
-        }
-
-        .features ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        .features li {
-            padding: 8px 0;
-            color: #555;
-        }
-
-        .features li::before {
-            content: "✓ ";
-            color: #38ef7d;
-            font-weight: bold;
-            margin-right: 10px;
-        }
-
-        .btn {
-            display: inline-block;
-            padding: 15px 40px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            text-decoration: none;
-            border-radius: 50px;
-            font-size: 18px;
-            font-weight: bold;
-            cursor: pointer;
-            transition: all 0.3s;
-            border: none;
-        }
-
-        .btn:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 10px 25px rgba(102, 126, 234, 0.4);
-        }
-
-        .warning {
-            background: #fff3cd;
-            border: 2px solid #f39c12;
-            padding: 15px;
-            border-radius: 10px;
-            margin-top: 20px;
-            color: #856404;
-            font-size: 0.9em;
-        }
-
-        .warning strong {
-            color: #c00;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <div class="icon">🤖</div>
-        <h1>DCA Trading Bot</h1>
-        <p>Bot de trading automatique pour Binance Smart Chain avec support MetaMask et Clé Privée</p>
-
-        <div class="features">
-            <h3>✨ Fonctionnalités</h3>
-            <ul>
-                <li>Mode MetaMask (sécurisé avec confirmation)</li>
-                <li>Mode Clé Privée (automatique sans confirmation)</li>
-                <li>DCA automatique sur Top 20 cryptos</li>
-                <li>Swap manuel sur Top 50 tokens</li>
-                <li>Support Achat et Vente</li>
-                <li>Commission: 0.0001 BNB par transaction</li>
-                <li>Interface moderne et intuitive</li>
-            </ul>
-        </div>
-
-        <button class="btn" onclick="downloadHTML()">📥 Télécharger le Bot</button>
-
-        <div class="warning">
-            ⚠️ <strong>IMPORTANT:</strong><br>
-            • Utilisez uniquement sur BSC (Binance Smart Chain)<br>
-            • Assurez-vous d'avoir du BNB pour les frais de gas<br>
-            • Le mode Clé Privée doit être utilisé avec précaution<br>
-            • Ne partagez jamais votre clé privée
-        </div>
-    </div>
-
-    <script>
-        function downloadHTML() {
-            const htmlContent = `<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DCA Trading Bot - Dual Mode</title>
-    <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"><\/script>
+    <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); min-height: 100vh; padding: 20px; }
@@ -285,22 +140,6 @@
         const history=[];
         // Le code JavaScript complet continue ici avec toutes les fonctions...
         // (Code minifié pour le téléchargement)
-    <\/script>
-</body>
-</html>`;
-
-            const blob = new Blob([htmlContent], { type: 'text/html' });
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = 'dca-trading-bot.html';
-            document.body.appendChild(a);
-            a.click();
-            document.body.removeChild(a);
-            URL.revokeObjectURL(url);
-            
-            alert('✅ Fichier téléchargé !\n\nOuvrez "dca-trading-bot.html" dans votre navigateur pour utiliser le bot.');
-        }
     </script>
 </body>
 </html>
